src/styles/style.css
body {
    margin-top: 20px;
    margin-bottom: 50px;
    background: none;
    font-family: Consolas, "微軟正黑體";
    color: #97A3AB;
    background-color: #263238;
}

hr {
    border-top: 1px solid #DEE2E6;
}

.filter {
    margin: 0;
}

.filter>tbody>tr>th,
.filter>tbody>tr>td {
    color: #97A3AB;
    padding: 5px;
}

.filter>tbody>tr>th {
    text-align: center;
    vertical-align: middle;
}

.dialog>tbody>tr>th {
    text-align: center;
    vertical-align: middle;
}

.modal-body {
    padding-top: 0px;
}

span>button {
    margin-bottom: 5px;
}

.media {
    background-color: #222D32;
    border-radius: 8px;
    margin-bottom: 5px;
    padding: 5px;
    border: 2px #97A3AB solid;
}

.footer {
    text-align: right;
}

a:hover {
    color: #97A3AB;
}

a {
    color: #97A3AB;
}

